# agent-trace-sdk

./: .env.example  .gitignore  README.md  pyproject.toml
dashboard/: app.py  rtce_client.py
examples/: basic_usage.py  generate_test_data.py
flink/: 01_llm_call_completed.sql  02_tool_call_completed.sql  03_session_summaries.sql  04_agent_health_metrics.sql
hooks/: claude_code_hook.py
src/agent_trace_sdk/: __init__.py  config.py  context.py  exceptions.py  producer.py  spans.py  tracer.py
src/agent_trace_sdk/models/: __init__.py  base.py  llm.py  session.py  tool.py
