[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-trace-sdk"
version = "0.1.0"
description = "Framework-agnostic SDK for capturing AI agent observability data and producing traces to Confluent Kafka"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka[schemaregistry]>=2.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace_sdk"]

[tool.ruff]
target-version = "py311"
